# llmblocks

./: .gitignore  README.md  pyproject.toml  requirements-playground.txt  requirements_providers.txt  run_playground.py  template.py  test_playground.py  try.ipynb
docs/: README.md  index.md
docs/api/: rag.md
docs/blocks/: rag.md
docs/usage/: rag_guide.md
examples/: basic_rag.py  chatbot_config.yaml  check_chatbot.py  llm_new.py  llm_provider.py  multi_provider_demo.py  multi_tool_agent.py  playground_demo.py
llmblocks/blocks/: agents.py  eval.py  memory.py  prompts.py  rag.py  tools.py  ui.py
llmblocks/blocks/llm_provider/: __init__.py  azure_openai_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py
llmblocks/blocks/memory/: base.py  factory.py  in_memory.py
llmblocks/cli/: main.py
llmblocks/components/chatbot/: chatbot.py  chatbot_config.py  langgraph_implementation.py
llmblocks/config/: defaults.yaml  google_rag.yaml  groq_rag.yaml  huggingface_rag.yaml  ollama_rag.yaml  openai_rag.yaml  prompts.yaml  rag.yaml  tools.yaml
llmblocks/core/: base_component.py  config_loader.py  llm_providers.py  logger.py  registry.py  tracing.py  utils.py
llmblocks/playground/: agent_playground.py  rag_playground.py  viewer.py
llmblocks/prebuilt/: __init__.py
llmblocks/prebuilt/chatbot/: __init__.py  basic_chatbot.py  chatbot_config.py
scripts/: export_traces.py
tests/blocks/: test_rag.py
tests/core/: test_llm_providers.py
